# repometrics

./: CHANGELOG.md  README.md  llms-full.txt  llms.txt  plan.md  pyproject.toml
.github/workflows/: ci.yml
repometrics/: __init__.py  cli.py  config.py  models.py  scanner.py  scoring.py
repometrics/metrics/: __init__.py  common.py  dependencies.py  gitstats.py  hygiene.py  structure.py
tests/: test_cli.py  test_common.py  test_dependencies.py  test_gitstats.py  test_hygiene.py  test_integration_scan.py  test_scoring.py  test_structure.py
