[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repository-metrics-cli"
version = "0.2.2"
description = "Deterministic repository health metrics for Python projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "repometrics contributors" }]
dependencies = [
  "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
repometrics = "repometrics.cli:main"

[tool.setuptools]
packages = ["repometrics", "repometrics.metrics"]
